# hydropattern

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: technicalNotes.md
docs/agents/: domain.md  issue-tracker.md
docs/review/behavior-deltas/: issue-13-parser-and-toml-contract-for-formatter-metric-options.md  issue-4-canonical-parser-error-envelope.md  issue-5-operator-value-normalization.md  issue-6-parameter-validation.md  issue-7-stable-normalized-request-shape.md
docs/user/: reference.md
examples/: detailed.toml  min_config.toml  minimal.toml  minimal_output.xlsx  multi.toml  multi_timeseries.csv  multi_timeseries.toml  multi_timeseries_output.xlsx  single_timeseries.csv  timeseries.csv
examples/Data_comparing/: Comparing.py  Comparing_notebook.ipynb
examples/Luvuvhu/: A9H012.txt  Luvuvhu.ipynb  Luvuvhu.toml  README.txt
examples/Luvuvhu/wflow/: cst_summary.csv
examples/Luvuvhu/wflow/Pathways-historical/: Pathway1-combined_grassriverdowngrassrivergrassall.csv  Pathway3-combined_grass1vc2grassall.csv  Pathway4-combined_grass1grassuptree2.csv  Pathway5-combined_grassriverdowntree1vcall - Copy.csv  baseline.csv  pathway2-combined_grass1grassmidgrassall.csv
examples/Luvuvhu/wrc/all-in-one/: A10A.ans  A10B.ans  A10C.ans  A21A.ans  A21B.ans  A21C.ans  A21D.ans  A21E.ans  A21F.ans  A21G.ans  A21H.ans  A21J.ans  A21K.ans  A21L.ans  A22A.ans  A22B.ans  A22C.ans  A22D.ans  A22E.ans  A22F.ans  A22G.ans  A22H.ans  A22J.ans  A23A.ans  A23B.ans  A23C.ans  A23D.ans  A23E.ans  A23F.ans  A23G.ans  A23H.ans  A23J.ans  A23K.ans  A23L.ans  A24A.ans  A24B.ans  A24C.ans  A24D.ans  A24E.ans  A24F.ans  (+1900 more)
examples/frio/: frio.csv  frio.ipynb  frio.md  frio2.csv
examples/minimal_output/: flow.csv
examples/multi_timeseries_output/: 0-0.csv  0-1.csv  1-0.csv  1-1.csv
hydropattern/: __main__.py  cli.py  errors.py  formatters.py  parsers.py  patterns.py  timeseries.py
tests/: test_cli.py  test_formatters.py  test_metric_options.py  test_operator_normalization.py  test_parameter_validation.py  test_patterns.py  test_stable_request_shape.py  test_timeseries.py
tests/test_files/: cli_smoke_config.toml  cli_smoke_input.csv  key_order_test.toml  reverse_order_test.toml
