[tool.poetry]
name = "hydropattern"
version = "0.0.0"
description = "A python command line application and package that finds natural flow regime like patterns in time series data."
authors = ["John Kucharski <johnkucharski@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
hydropattern="hydropattern.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
climate-canvas = {git = "https://github.com/JohnRushKucharski/climate-canvas.git"}
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
typer = "^0.12.3"
openpyxl = "^3.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
types-python-dateutil = "^2.9.0.20250822"
pandas-stubs = "^2.3.2.250827"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
