[project]
name = "hydropattern"
version = "0.0.0"
description = "A python command line application and package that finds natural flow regime like patterns in time series data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [
	{ name = "John Kucharski", email = "johnkucharski@gmail.com" },
]
dependencies = [
	"climate-canvas @ git+https://github.com/JohnRushKucharski/climate-canvas.git",
	"numpy>=2.0.1,<3.0.0",
	"pandas>=2.2.2,<3.0.0",
	"matplotlib>=3.9.2,<4.0.0",
	"typer==0.12.3",
	"click>=8.1.7,<8.2.0",
	"openpyxl>=3.1.5,<4.0.0",
]

[project.scripts]
hydropattern = "hydropattern.cli:app"

[dependency-groups]
test = [
	"pytest>=8.3.2,<9.0.0",
]
dev = [
	"mypy>=1.18.2,<2.0.0",
	"types-python-dateutil>=2.9.0.20250822,<3.0.0",
	"pandas-stubs>=2.3.2.250827,<3.0.0",
	"ipykernel>=6.29.5,<7.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hydropattern"]

[tool.hatch.metadata]
allow-direct-references = true
